--- a/src/pages/editor/create-post.astro
+++ b/src/pages/editor/create-post.astro
@@ -1,11 +1,11 @@
 ---
 import "../../styles/global.css";
 import AdminLayout from "../../layouts/AdminLayout.astro";
-import AdminUI from "../../components/adminUI/views/AdminUI.astro";
+import EditorUI from "../../components/adminUI/views/EditorUI.astro";
 
 
 
 ---
 <AdminLayout>
-    <AdminUI/>
+    <EditorUI/>
 </AdminLayout>
