--- a/src/components/adminUI/RichTextEditor.astro
+++ b/src/components/adminUI/RichTextEditor.astro
@@ -1,29 +1,23 @@
 ---
-import Database from "better-sqlite3";
 
-const post_id = Astro.url.searchParams.get("post_id");
-
-const db = new Database('src/data/blog.db');
-const query = `SELECT * FROM posts WHERE id = ?`;
-const data = db.prepare(query).get(post_id);
-
-db.close();
 
 let renderPostHTML:string;
 let renderPostTitle: string;
  
-if(data){
-  renderPostTitle = data.title;
-  renderPostHTML = data.content;
+const{ postData } = Astro.props;
+
+import { postCurrentState } from '../../store/posts';
+console.log(postCurrentState.value)
+
+if(postData){
+  renderPostTitle = postData.title;
+  renderPostHTML = postData.content;
 } else {
   renderPostTitle="";
   renderPostHTML = "<h2> Escribe tu post </h2>";
 }
 ---
   <script>
-
-
-
     import Quill from "quill";
   const toolbarOptions = [
     [{ header: [1, 2, 3, false] }],
@@ -40,7 +34,7 @@ if(data){
     theme: "snow",
   });
 
-  setInterval(()=>console.log(quill.getSemanticHTML(0, 50000),5000))
+  quill.getSemanticHTML(0, 50000);
   </script>
   <style>
       #posteditor {
@@ -51,10 +45,8 @@ if(data){
     font-size:var(--text-2xl)
   }
   </style>
-  <div class="container mx-auto p-6">
-    <div class="flex flex-col md:flex-row gap-6">
+
       <!-- Main content area (80%) -->
-      <div class="w-full md:w-4/5 bg-white rounded-lg shadow-sm p-6">
         <input 
           id="post-title" 
           type="text" 
@@ -63,14 +55,10 @@ if(data){
           class="w-full text-3xl font-bold border-0 border-b border-gray-200 pb-2 mb-6 focus:outline-none focus:border-blue-500 focus:ring-0" 
         />
         <div>
-          <div class="border-hidden min-h-96 p-4 text-gray-800" id="posteditor">
-        <Fragment set:html= {renderPostHTML}/> 
-
-          </div>
+        <div class="border-hidden min-h-96 p-4 text-gray-800" id="posteditor">
+          <Fragment set:html= {renderPostHTML}/> 
         </div>
-      </div>
+ 
+    
       
-      <!-- Sidebar (20%) -->
-      
-    </div>
   </div>
