--- a/src/components/adminUI/views/EditorUI.astro
+++ b/src/components/adminUI/views/EditorUI.astro
@@ -15,6 +15,9 @@ db.close();
 import { postCurrentState } from '../../../store/posts';
 postCurrentState.set(data);
 ---
+<script>
+
+</script>
 
 <div class="container mx-auto p-6">
   <div class="flex flex-col md:flex-row gap-6">
