--- a/src/components/adminUI/views/EditorUI.astro
+++ b/src/components/adminUI/views/EditorUI.astro
@@ -12,13 +12,16 @@ const data = db.prepare(query).get(post_id);
 
 db.close();
 
-import { postCurrentState } from '../../../store/posts';
-postCurrentState.set(data);
+
+
 ---
-<script>
+<script define:vars={{data}}>
+  //import { postCurrentState } from '../../../store/posts';
+  //postCurrentState.set(data);
+
+
 
 </script>
-
 <div class="container mx-auto p-6">
   <div class="flex flex-col md:flex-row gap-6">
     <!-- Content Cards -->
